--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
     document.addEventListener('click', function(e) {
       if (e.target.type === 'checkbox') {
         var label = e.target.nextElementSibling;
-        label.classList.toggle('strike-through','fade');
-        
-      }  
+        label.classList.toggle('strike-through');
+      }else false;  
     });
 
     
